--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The Starlight SDK for JavaScript",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "rimraf dist && tsc",
     "dev": "tsc --watch",
     "prepare": "husky install",
     "prepublishOnly": "npm run build",
@@ -43,5 +43,8 @@
       "eslint --cache --fix",
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "rimraf": "^3.0.2"
   }
 }
