--- a/package.json
+++ b/package.json
@@ -36,15 +36,13 @@
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
     "prettier": "2.4.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "rimraf": "^3.0.2"
   },
   "lint-staged": {
     "*.{ts}": [
       "eslint --cache --fix",
       "prettier --write"
     ]
-  },
-  "dependencies": {
-    "rimraf": "^3.0.2"
   }
 }
