--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.3.5",
   "description": "The Starlight SDK for JavaScript",
   "main": "dist/index.js",
+  "sideEffects": false,
   "scripts": {
     "build": "rimraf dist && tsc",
     "dev": "tsc --watch",
