--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "@starlightcms/js-sdk",
   "version": "0.3.7",
   "description": "The Starlight SDK for JavaScript",
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "exports": {
+    "require": "dist/cjs/index.js",
+    "import": "dist/esm/index.js"
+  },
   "sideEffects": false,
   "scripts": {
-    "build": "rimraf dist && tsc",
+    "build": "rimraf dist && npm run build:cjs && npm run build:esm",
+    "build:esm": "tsc --module esnext --outDir dist/esm",
+    "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "dev": "tsc --watch",
     "prepare": "husky install",
     "prepublishOnly": "npm run build",
