Fix exports path pattern

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "The Starlight SDK for JavaScript",
   "main": "dist/cjs/index.js",
   "exports": {
-    "require": "dist/cjs/index.js",
-    "import": "dist/esm/index.js"
+    "require": "./dist/cjs/index.js",
+    "import": "./dist/esm/index.js"
   },
   "sideEffects": false,
   "scripts": {
