Add esm and cjs builds

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "rimraf dist && npm run build:cjs && npm run build:esm",
     "build:esm": "tsc --module esnext --outDir dist/esm",
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
-    "dev": "tsc --watch",
+    "dev": "tsc --watch --module esnext --outDir dist/esm",
+    "dev:cjs": "tsc --watch --module commonjs --outDir dist/cjs",
     "prepare": "husky install",
     "prepublishOnly": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
