--- a/website/package.json
+++ b/website/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.1.0",
     "@tsconfig/docusaurus": "^1.0.5",
+    "docusaurus-plugin-typedoc-api": "^2.4.0",
     "typescript": "^4.7.4"
   },
   "browserslist": {
