Fix test spec files being included in the build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,6 @@
     "inlineSources": true,
     "moduleResolution": "node"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["**/*.spec.ts"]
 }
