Add Form and Collection tests and modify some structure

--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
   },
   "lint-staged": {
     "*.{ts}": [
-      "vitest --passWithNoTests",
+      "vitest --passWithNoTests --run",
       "eslint --cache --fix",
       "prettier --write"
     ]
