--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@starlightcms/js-sdk",
-  "version": "2.2.1",
+  "version": "3.0.0-beta.0",
   "description": "The Starlight SDK for JavaScript",
   "main": "dist/cjs/index.js",
   "exports": {
