--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "name": "@starlightcms/js-sdk",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "description": "The Starlight SDK for JavaScript",
-  "workspaces": [
-    "website"
-  ],
   "main": "dist/cjs/index.js",
   "exports": {
     "require": "./dist/cjs/index.js",
@@ -25,7 +22,7 @@
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "type-check": "tsc --pretty --noEmit",
-    "lint": "eslint"
+    "lint": "eslint src"
   },
   "files": [
     "dist/**/*"
@@ -45,21 +42,23 @@
   },
   "homepage": "https://github.com/starlightcms/js-sdk#readme",
   "devDependencies": {
-    "@types/node": "^16.10.1",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
-    "@vitest/coverage-c8": "^0.24.3",
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.2",
+    "@types/node": "^24.10.3",
+    "@typescript-eslint/eslint-plugin": "^8.49.0",
+    "@typescript-eslint/parser": "^8.49.0",
     "cross-fetch": "^3.1.5",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "globals": "^16.5.0",
     "husky": "^7.0.2",
-    "jsdom": "^20.0.1",
+    "jsdom": "^27.3.0",
     "lint-staged": "^11.1.2",
-    "msw": "^0.47.4",
-    "prettier": "2.4.1",
+    "msw": "^2.12.4",
+    "prettier": "^3.7.4",
     "rimraf": "^3.0.2",
-    "typescript": "^4.4.3",
-    "vitest": "^0.24.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.15"
   },
   "lint-staged": {
     "*.{ts}": [
